acomodamiento de pantalla

--- a/Project/plugin.properties
+++ b/Project/plugin.properties
@@ -1,10 +1,13 @@
+CreateUCM= Create UCM
 DatabaseConfiguration= Database Configuration
 Edit= Edit
+EditArchitectureSpecification= Edit Architecture Specification
 EditQualityRequirement= Edit Quality Requirement
 EditSystem= Edit System
 Evaluation= Evaluation
 Management= Management
 New= New
+NewArchitectureSpecification= New Architecture Specification
 NewQualityRequirement= New Quality Requirement
 NewSystem= New System
 Open= Open
